# wot-game-reader

./: Cargo.toml  README.md
src/: errors.rs  game_reader.rs  lib.rs
src/error/: mod.rs
src/localization/: mod.rs
src/map/: arena.rs  mod.rs  reader.rs
src/tests/: mod.rs
