[package]
name = "wot_game_reader"
description = "Fetch and extract data from the game folder of world of tanks"
readme = "README.md"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Hamel <gabriel.hamel.pro@gmail.com>"]
repository = "https://github.com/Gabouchet/wot-game-reader"
license = "MIT OR Apache-2.0"
keywords = ["wot", "parser"]

[lib]
name = "wot_game_reader"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"
poreader = "1.1.1"
serde_variant = "0.1"
merge = { git = "https://github.com/Gabouchet/merge-rs", version = "0.1.0" }
